// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
<button
  aria-busy="false"
  class="wp-components-button wp-components-close-button css-g5raua"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-bzokzn"
      data-g2-c16t="true"
      data-g2-component="ButtonIcon"
    >
      <div
        class="wp-components-icon css-1d07aa5"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="12"
          size="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </div>
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render size 1`] = `
<button
  aria-busy="false"
  class="wp-components-button wp-components-close-button css-fwt7xl"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-bzokzn"
      data-g2-c16t="true"
      data-g2-component="ButtonIcon"
    >
      <div
        class="wp-components-icon css-1d07aa5"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="12"
          size="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </div>
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;

exports[`props should render variant 1`] = `
<button
  aria-busy="false"
  class="wp-components-button wp-components-close-button css-92fcn3"
  data-destructive="false"
  data-g2-c16t="true"
  data-g2-component="CloseButton"
  data-icon="true"
  type="button"
>
  <span
    class="wp-components-view wp-components-flex css-2r7rsp"
    data-g2-c16t="true"
    data-g2-component="Flex"
  >
    <span
      class="wp-components-flex-item css-bzokzn"
      data-g2-c16t="true"
      data-g2-component="ButtonIcon"
    >
      <div
        class="wp-components-icon css-1d07aa5"
        data-g2-c16t="true"
        data-g2-component="Icon"
      >
        <svg
          fill="none"
          height="12"
          size="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </div>
    </span>
  </span>
  <span
    class="wp-components-elevation css-17x6dun"
    data-g2-c16t="true"
    data-g2-component="ButtonElevation"
  />
</button>
`;
